modified:   index.html

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="col-md-8 col-md-offset-2 text-center">
                         <div class="display-t">
                             <div class="display-tc animate-box" data-animate-effect="fadeIn">
-                                <h1>Swiss Institute of Computer & Management</h1>
+                                <h1 style="font-weight:550 ;">Swiss Institute of Computer & Management</h1>
                                 <h2></h2>
                                 <p><a class="btn btn-primary btn-lg btn-learn" href="#availablecourse">Take A Course</a> <a class="btn btn-primary btn-lg popup-vimeo btn-video" href="#"><i class="icon-play"></i> Watch Video</a></p>
                             </div>
